# Ballistic-Models

./: Atmosphere.cpp  Atmosphere.h  CMakeLists.txt  M_agm.py  atmosphere_app  atmosphere_example  graphs.py  libatmosphere.dylib  main.cpp
Include/: atmosphere.h  trajectory.h
Src/: atmosphere.cpp  trajectory.cpp
